packages/jsii/test/negatives/neg.behavior-requires-iprefix.ts
export interface Something {
  // The presence of this method requires an I prefix on the interface
  doSomething(): void;
}
